# HackArena-Cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
scripts/: build-release-win-x64.ps1  write-sha256sums.ps1  write-sha256sums.sh
src/: archive.rs  auth_cmd.rs  clean.rs  cli.rs  cmd_hint.rs  config.rs  constants.rs  doctor.rs  download.rs  error.rs  github_auth.rs  github_http.rs  github_releases.rs  install.rs  main.rs  self_update.rs  submission_proto.rs  submit.rs
src/config/: edition_config.rs  editions.rs  fs.rs  paths.rs  project.rs  project_manifest.rs  workspace.rs  workspace_migrations.rs
